# apk-tools

./: .editorconfig  .gitignore  .gitlab-ci.yml  .mailmap  .travis.yml  Make.rules  Makefile  README.md  VERSION  get-version.sh  meson.build  meson_options.txt
doc/: Makefile  apk-adbdump.8.scd  apk-adbgen.8.scd  apk-adbsign.8.scd  apk-add.8.scd  apk-audit.8.scd  apk-cache.5.scd  apk-cache.8.scd  apk-convdb.8.scd  apk-convndx.8.scd  apk-del.8.scd  apk-dot.8.scd  apk-extract.8.scd  apk-fetch.8.scd  apk-fix.8.scd  apk-index.8.scd  apk-info.8.scd  apk-keys.5.scd  apk-list.8.scd  apk-manifest.8.scd  apk-mkndx.8.scd  apk-mkpkg.8.scd  apk-package.5.scd  apk-policy.8.scd  apk-protected_paths.5.scd  apk-protected_paths.d.5.scd  apk-query.8.scd  apk-repositories.5.scd  apk-search.8.scd  apk-stats.8.scd  apk-update.8.scd  apk-upgrade.8.scd  apk-v2.5.scd  apk-v3.5.scd  apk-verify.8.scd  apk-version.8.scd  apk-world.5.scd  apk.8.scd  meson.build
libfetch/: Makefile  common.c  common.h  fetch.3  fetch.c  fetch.cat3  fetch.h  file.c  ftp.c  http.c  meson.build
lua/: Makefile  lua-apk.c  meson.build
portability/: endian.h  fcntl.h  getrandom.c  memfd_create.c  memrchr.c  meson.build  mknodat.c  pipe2.c  qsort_r.c  reallocarray.c  sched.h  socket.c  stdlib.h  strchrnul.c  string.h  strlcpy.c  unistd.h
portability/sys/: mman.h  random.h  socket.h  stat.h  sysmacros.h
python/: apk_module.c  meson.build
python/tests/: test_apk.py
scripts/: generate-meson-crossfile.sh
src/: Makefile  adb.c  adb.h  adb_comp.c  adb_trust.c  adb_walk_adb.c  adb_walk_genadb.c  adb_walk_genjson.c  adb_walk_gentext.c  adb_walk_istream.c  adb_walk_text.c  add.c  apk.c  apk.pc.in  apk_adb.c  apk_adb.h  apk_applet.h  apk_arch.h  apk_archive.h  apk_atom.h  apk_balloc.h  apk_blob.h  apk_context.h  apk_crypto.h  apk_crypto_mbedtls.h  apk_crypto_openssl.h  apk_ctype.h  apk_database.h  apk_defines.h  apk_extract.h  apk_fs.h  apk_hash.h  apk_io.h  apk_nproc.h  apk_openssl.h  apk_package.h  apk_pathbuilder.h  apk_print.h  apk_process.h  apk_provider_data.h  (+107 more)
test/: .gitignore  Makefile  basic.repo  basic1.test  basic10.test  basic11.test  basic12.test  basic13.test  basic14.test  basic16.test  basic17.installed  basic17.test  basic18.test  basic19.test  basic2.test  basic3.test  basic4.test  basic5.test  basic6.test  basic8.test  basic9.test  command-parsing.sh  complicated1.test  complicated2.test  complicated3.test  complicated4.test  conflict1.test  conflict2.test  conflict3.test  enum.sh  error1.test  error10.test  error2.test  error3.test  error4.test  error5.test  error6.test  error7.test  error8.test  error9.test  (+79 more)
test/alpine/: Makefile  test1.sh  test2.sh  test3.sh  test4.sh  test5.sh  test6.sh  test7.sh  test8.sh
test/solver/: basic1.test  basic10.test  basic11.test  basic14.test  basic15.test  basic16.test  basic17.repo  basic17.test  basic18.test  basic2.test  basic20.test  basic21.repo  basic21.test  basic3.test  basic4.test  basic5.test  basic6.test  basic7.test  basic8.test  basic9.test  complicated1.test  complicated2.test  complicated3.test  complicated4.test  conflict.installed  conflict1.test  conflict2.repo  conflict3.test  error.repo  error11.test  error2.test  error4.test  error5.test  error7.test  error8.test  fix1.test  fix2.test  fix3.test  fix4.test  fix5.test  (+83 more)
test/unit/: apk_test.h  blob_test.c  db_test.c  io_test.c  main.c  meson.build  package_test.c  process_test.c  repoparser_test.c  version_test.c
test/user/: cache-clean.sh  cache-tmpfs.sh  command-parsing.sh  fetch.sh  file-changes.sh  hardlink.sh  mkndx.sh  mkpkg.sh  overlay.sh  query-db.targz.data  query-installed.data  query.sh  replaces.sh  scripts.sh  symlink.sh  update.sh  usrmerge.sh  uvol.sh  version.sh
tests/: meson.build  test-basic.sh  test-lib.sh  test-version.sh
