option('docs', description: 'Build manpages with scdoc', type: 'feature', value: 'auto')
option('help', description: 'Build help into apk binaries, needs lua', type: 'feature', value: 'auto')
option('compressed-help', description: 'Compress help database, needs lua-zlib', type: 'boolean', value: true)
option('lua', description: 'Build luaapk (lua bindings)', type: 'feature', value: 'auto')
option('lua_version', description: 'Lua version to build against', type: 'string', value: '5.3')
option('static_apk', description: 'Also build apk.static', type: 'boolean', value: false)
option('arch_prefix', description: 'Define a custom arch prefix for default arch', type: 'string')
option('zstd', description: 'Build with zstd support', type: 'boolean', value: true)
