option('arch', description: 'Specify a custom arch', type: 'string')
option('arch_prefix', description: 'Define a custom arch prefix for default arch', type: 'string')
option('crypto_backend', description: 'Crypto backend', type: 'combo', choices: ['openssl', 'mbedtls'], value: 'openssl')
option('compressed-help', description: 'Compress help database, needs lua-zlib', type: 'boolean', value: true)
option('docs', description: 'Build manpages with scdoc', type: 'feature', value: 'auto')
option('help', description: 'Build help into apk binaries, needs lua', type: 'feature', value: 'auto')
option('lua', description: 'Build luaapk (lua bindings)', type: 'feature', value: 'auto')
option('lua_bin', description: 'Lua binary name', type: 'string', value: '')
option('lua_pc', description: 'Lua pkgconfig file name', type: 'string', value: '')
option('lua_version', description: 'Lua version to use with unset lua_bin and lua_pc', type: 'string', value: '5.3')
option('python', description: 'Build python binding', type: 'feature', value: 'auto')
option('tests', description: 'Build tests', type: 'feature', value: 'auto')
option('url_backend', description: 'URL backend', type: 'combo', choices: ['libfetch', 'wget'], value: 'libfetch')
option('uvol_db_target', description: 'Default target for uvol database layer', type: 'string')
option('zstd', description: 'Build with zstd support', type: 'boolean', value: true)
